Cursor pointer on dismissible-button (#1041)
* Update styles.css

* prettier

--- a/src/Elastic.Markdown/Assets/styles.css
+++ b/src/Elastic.Markdown/Assets/styles.css
@@ -254,7 +254,7 @@ body {
 }
 
 #dismissible-button {
-	@apply text-blue-developer text-base font-bold;
+	@apply text-blue-developer cursor-pointer text-base font-bold;
 	&:hover {
 		@apply bg-grey-20 rounded-2xl;
 	}
