Use text-wrap pretty more (#1069)
* Use text-wrap pretty more

* Prettier fmt

--- a/src/Elastic.Markdown/Assets/styles.css
+++ b/src/Elastic.Markdown/Assets/styles.css
@@ -91,7 +91,7 @@
 		}
 
 		.sidebar-link {
-			@apply text-ink-light inline-block leading-[1.2em] text-wrap hover:text-black md:text-sm;
+			@apply text-ink-light inline-block leading-[1.2em] text-pretty hover:text-black md:text-sm;
 		}
 	}
 
