Alphabetize _Archive.cshtml (#1086)
* Alphabetize _Archive.cshtml

* Update src/Elastic.Markdown/Slices/Layout/_Archive.cshtml

* Add new links to _Archive.cshtml

--- a/src/Elastic.Markdown/Slices/Layout/_Archive.cshtml
+++ b/src/Elastic.Markdown/Slices/Layout/_Archive.cshtml
@@ -210,20 +210,20 @@
 		<ul class="grid sm:grid-cols-2 lg:grid-cols-3 gap-x-6 mt-4 list-disc text-grey-40 ml-6">
 			<li class="mt-2">
 				<a class="text-blue-elastic-60 hover:text-blue-elastic-90 hover:underline"
-				   href="https://elastic.co/guide/en/elastic-stack-gke/current/index.html" target="_blank"
-				   rel="noopener noreferrer">Elastic Stack and Google Cloud's Anthos</a></li>
-			<li class="mt-2">
-				<a class="text-blue-elastic-60 hover:text-blue-elastic-90 hover:underline"
 				   href="https://elastic.co/guide/en/elasticsearch/guide/current/index.html" target="_blank"
 				   rel="noopener noreferrer">Elasticsearch - The Definitive Guide</a></li>
 			<li class="mt-2">
 				<a class="text-blue-elastic-60 hover:text-blue-elastic-90 hover:underline"
-				   href="https://elastic.co/guide/en/elasticsearch/resiliency/current/index.html" target="_blank"
-				   rel="noopener noreferrer">Elasticsearch Resiliency Status</a></li>
-			<li class="mt-2">
-				<a class="text-blue-elastic-60 hover:text-blue-elastic-90 hover:underline"
 				   href="https://elastic.co/guide/en/elasticsearch/client/elasticsearch-js/current/index.html"
 				   target="_blank" rel="noopener noreferrer">Elasticsearch.js for 5.6-7.6</a></li>
+			<li class="mt-2">
+				<a class="text-blue-elastic-60 hover:text-blue-elastic-90 hover:underline"
+				   href="https://elastic.co/guide/en/elastic-stack-gke/current/index.html" target="_blank"
+				   rel="noopener noreferrer">Elastic Stack and Google Cloud's Anthos</a></li>
+			<li class="mt-2">
+				<a class="text-blue-elastic-60 hover:text-blue-elastic-90 hover:underline"
+				   href="https://elastic.co/guide/en/elasticsearch/resiliency/current/index.html" target="_blank"
+				   rel="noopener noreferrer">Elasticsearch Resiliency Status</a></li>
 			<li class="mt-2">
 				<a class="text-blue-elastic-60 hover:text-blue-elastic-90 hover:underline"
 				   href="https://elastic.co/guide/en/beats/functionbeat/current/index.html" target="_blank"
@@ -290,16 +290,16 @@
 				   rel="noopener noreferrer">Site Search Reference</a></li>
 			<li class="mt-2">
 				<a class="text-blue-elastic-60 hover:text-blue-elastic-90 hover:underline"
+				   href="https://elastic.co/guide/en/elastic-stack-overview/current/index.html" target="_blank"
+				   rel="noopener noreferrer">Stack Overview [7.4] — other versions</a></li>
+			<li class="mt-2">
+				<a class="text-blue-elastic-60 hover:text-blue-elastic-90 hover:underline"
 				   href="https://elastic.co/guide/en/beats/topbeat/current/index.html" target="_blank"
 				   rel="noopener noreferrer">Topbeat Reference</a></li>
 			<li class="mt-2">
 				<a class="text-blue-elastic-60 hover:text-blue-elastic-90 hover:underline"
 				   href="https://elastic.co/guide/en/uptime/current/index.html" target="_blank"
 				   rel="noopener noreferrer">Uptime Monitoring Guide for 7.2-7.9</a></li>
-			<li class="mt-2">
-				<a class="text-blue-elastic-60 hover:text-blue-elastic-90 hover:underline"
-				   href="https://elastic.co/guide/en/elastic-stack-overview/current/index.html" target="_blank"
-				   rel="noopener noreferrer">Stack Overview [7.4] &amp;mdash; other versions</a></li>
 			<li class="mt-2">
 				<a class="text-blue-elastic-60 hover:text-blue-elastic-90 hover:underline"
 				   href="https://elastic.co/guide/en/watcher/current/index.html" target="_blank"
