--- a/src/Elastic.Markdown/Slices/_Layout.cshtml
+++ b/src/Elastic.Markdown/Slices/_Layout.cshtml
@@ -69,8 +69,8 @@
 	<aside id="dismissible-banner" class="admonition tip">
 		<div class="container flex justify-between items-center mx-auto">
 			<p>
-				You are viewing the new Elastic Docs experience for the <a class="link text-base" target="_blank" href="/docs/get-started/versioning-availability#find-docs-for-your-product-version">latest product versions</a>, including Elastic Stack 9.0.
-				To view the old Docs experience, go to <a class="link text-base" target="_blank" href="https://elastic.co/guide">elastic.co/guide</a>.
+				Welcome to the docs for the <a class="link text-base" href="/docs/get-started/versioning-availability#find-docs-for-your-product-version">latest Elastic product versions</a>, including Elastic Stack 9.0 and Elastic Cloud Serverless.
+				To view previous versions, go to <a class="link text-base" target="_blank" href="https://elastic.co/guide">elastic.co/guide</a>.
 			</p>
 			<button id="dismissible-button">
 				<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
